[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/bootsplash/bootsplashblank.png" type="Texture" id=1]
[ext_resource path="res://scenes/startup/Startup.gd" type="Script" id=2]
[ext_resource path="res://assets/bootsplash/bootsplash1.png" type="Texture" id=3]
[ext_resource path="res://scenes/menus/Main Menu.tscn" type="PackedScene" id=4]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
sleep_time = 1.0
next_scene = ExtResource( 4 )

[node name="Bootsplashblank" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bootsplash1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
